--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,30 +18,35 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="@color/white"
-        app:fabCradleMargin="10dp"
+        app:fabCradleMargin="20dp"
         app:fabCradleRoundedCornerRadius="50dp">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
             android:background="@color/transparent"
             app:menu="@menu/bottom_menu"
             app:labelVisibilityMode="labeled"/>
 
     </com.google.android.material.bottomappbar.BottomAppBar>
 
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:backgroundTint="@color/white"
         android:src="@drawable/scan_icon"
+        app:borderWidth="0dp"
         app:layout_anchor="@id/bottomAppBar"
-        app:maxImageSize="40dp"
-        android:tint="@color/lavender"/>
+        app:maxImageSize="50dp">
 
 
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
