--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,16 +37,34 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:id="@+id/scanBtn"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="40dp"
         app:backgroundTint="@color/white"
-        android:src="@drawable/scan_icon"
         app:borderWidth="0dp"
         app:layout_anchor="@id/bottomAppBar"
-        app:maxImageSize="50dp">
-
+        app:maxImageSize="90dp">
 
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/continueBtn"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="40dp"
+        app:layout_anchor="@id/bottomAppBar"
+        app:layout_anchorGravity="center"
+        android:backgroundTint="@color/green"
+        app:cardCornerRadius="45dp">
+
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/continue_icon"
+            android:backgroundTint="@color/green"/>
+
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
