--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_700">#424580</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -10,4 +10,6 @@
     <color name="lavender">#8692f7</color>
     <color name="transparent">#00000000</color>
     <color name="pillai">#424580</color>
+    <color name="green">#49c476</color>
+    <color name="red">#d16d54</color>
 </resources>
