--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/white"
+        android:background="?attr/colorPrimaryVariant"
         app:fabCradleMargin="20dp"
         app:fabCradleRoundedCornerRadius="50dp">
 
@@ -49,7 +49,7 @@
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/continueBtn"
+        android:id="@+id/continueCard"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginBottom="40dp"
@@ -59,6 +59,7 @@
         app:cardCornerRadius="45dp">
 
         <ImageButton
+            android:id="@+id/continueBtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/continue_icon"
