--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Pillai" parent="Theme.Design.Light.NoActionBar">
+
+    <style name="Theme.Pillai" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/lavender</item>
-        <item name="colorPrimaryVariant">@color/lavender</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorPrimary">@color/pillai
+        </item> <!-- Assuming @color/primaryColor is defined in colors.xml -->
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorOnPrimary">@color/green</item>
+        <!-- Container color. -->
+        <item name="colorPrimaryContainer">@color/lavender</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">@color/white</item>
         <!-- Customize your theme here. -->
+        <item name="colorOnBackground">@color/white</item>
+        <item name="android:colorBackground">@color/pillai</item>
+        <item name="android:textColor">@color/black</item>
+        <!-- Chat message color. -->
+        <item name="colorSecondaryContainer">@color/lavender</item>
+        <!-- Background color settings. -->
+        <item name="colorOnSecondaryContainer">@color/white</item>
     </style>
+
+    <style name="Theme.Pillai.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Pillai.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Pillai.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
